@@ -240,6 +240,11 @@ static struct ovsdb_idl_txn *stats_txn;
 static int stats_timer_interval;
 static long long int stats_timer = LLONG_MIN;
 
+/* Each time this timer expires, the bridge fetches various status information
+ * such as for STP, RSTP, Bonding, etc and pushes them into the database. */
+static int status_timer_interval;
+static long long int status_timer = LLONG_MIN;
+
 /* Each time this timer expires, the bridge fetches the list of port/VLAN
  * membership that has been modified by the AA.
  */
@@ -2840,8 +2845,6 @@ port_refresh_rstp_status(struct port *port)
     struct ofproto *ofproto = port->bridge->ofproto;
     struct iface *iface;
     struct ofproto_port_rstp_status status;
-    const char *keys[4];
-    int64_t int_values[4];
     struct smap smap;
 
     if (port_is_synthetic(port)) {
@@ -2861,7 +2864,6 @@ port_refresh_rstp_status(struct port *port)
 
     if (!status.enabled) {
         ovsrec_port_set_rstp_status(port->cfg, NULL);
-        ovsrec_port_set_rstp_statistics(port->cfg, NULL, NULL, 0);
         return;
     }
     /* Set Status column. */
@@ -2882,6 +2884,36 @@ port_refresh_rstp_status(struct port *port)
 
     ovsrec_port_set_rstp_status(port->cfg, &smap);
     smap_destroy(&smap);
+}
+
+static void
+port_refresh_rstp_stats(struct port *port)
+{
+    struct ofproto *ofproto = port->bridge->ofproto;
+    struct iface *iface;
+    struct ofproto_port_rstp_status status;
+    const char *keys[4];
+    int64_t int_values[4];
+
+    if (port_is_synthetic(port)) {
+        return;
+    }
+
+    /* RSTP doesn't currently support bonds. */
+    if (!ovs_list_is_singleton(&port->ifaces)) {
+        ovsrec_port_set_rstp_statistics(port->cfg, NULL, NULL, 0);
+        return;
+    }
+
+    iface = CONTAINER_OF(ovs_list_front(&port->ifaces), struct iface, port_elem);
+    if (ofproto_port_get_rstp_status(ofproto, iface->ofp_port, &status)) {
+        return;
+    }
+
+    if (!status.enabled) {
+        ovsrec_port_set_rstp_statistics(port->cfg, NULL, NULL, 0);
+        return;
+    }
 
     /* Set Statistics column. */
     keys[0] = "rstp_tx_count";
@@ -3050,6 +3082,7 @@ run_stats_update(void)
                         iface_refresh_stats(iface);
                     }
                     port_refresh_stp_stats(port);
+                    port_refresh_rstp_stats(port);
                 }
                 HMAP_FOR_EACH (m, hmap_node, &br->mirrors) {
                     mirror_refresh_stats(m);
@@ -3084,12 +3117,24 @@ static void
 run_status_update(void)
 {
     if (!status_txn) {
+        const struct ovsrec_open_vswitch *cfg = ovsrec_open_vswitch_first(idl);
         uint64_t seq;
+        int status_interval;
 
-        /* Rate limit the update.  Do not start a new update if the
+         /* Status update interval should always be greater than or equal to
+         * 1000 ms. */
+        status_interval = MAX(smap_get_int(&cfg->other_config,
+                                           "status-update-interval",
+                                           1000), 1000);
+        if (status_timer_interval != status_interval) {
+            status_timer_interval = status_interval;
+            status_timer = LLONG_MIN;
+        }
+
+        /* Rate limit the update and do not start a new update if the
          * previous one is not done. */
         seq = seq_read(connectivity_seq_get());
-        if (seq != connectivity_seqno || status_txn_try_again) {
+        if (time_msec() >= status_timer && (seq != connectivity_seqno || status_txn_try_again)) {
             const struct ovsrec_open_vswitch *cfg =
                 ovsrec_open_vswitch_first(idl);
             struct bridge *br;
@@ -3127,6 +3172,7 @@ run_status_update(void)
         status = ovsdb_idl_txn_commit(status_txn);
         if (status != TXN_INCOMPLETE) {
             ovsdb_idl_txn_destroy(status_txn);
+            status_timer = time_msec() + status_timer_interval;
             status_txn = NULL;
 
             /* Sets the 'status_txn_try_again' if the transaction fails. */
